# controller/conf_controller.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"es-client/commons"
 	"es-client/models"
-	"log"
 
 	"github.com/gin-gonic/gin"
 )
@@ -20,45 +19,63 @@ type ConfController struct {
 // @Success 200 {string} json {"code","msg","data"}
 // @Router /conf/get [get]
 func (con ConfController) GetConfig(c *gin.Context) {
-	conf := commons.GetConfig("app.es.conf")
+	conf := commons.GetESConfigs()
 	con.Ok(c, "获取配置成功", conf)
 }
 
-// SetConfig
+// AddConfig
+// @Summary 添加es配置
+// @Tags es配置
+// @Accept json
+// @Produce json
+// @Success 200 {string} json{"code","msg","data"}
+// @Router /conf/add [post]
+func (con ConfController) AddConfig(c *gin.Context) {
+	var newConfig models.ESConfig
+	if err := c.ShouldBindJSON(&newConfig); err != nil {
+		con.Error(c, "添加配置失败")
+		return
+	}
+
+	err := commons.AddESConfig(newConfig)
+	if err != "" {
+		con.Error(c, "添加配置失败")
+		return
+	}
+	con.Ok(c, "添加配置成功", newConfig)
+}
+
+// DeleteConfig
+// @Summary 删除es配置
+// @Tags es配置
+// @Accept json
+// @Produce json
+// @Success 200 {string} json{"code","msg","data"}
+// @Router /conf/del [post]
+func (con ConfController) DeleteConfig(c *gin.Context) {
+	name := c.Param("name")
+	err := commons.DeleteESConfig(name)
+	if err != "" {
+		con.Error(c, "删除配置失败")
+		return
+	}
+	con.Ok(c, "删除配置成功", nil)
+}
+
+// SelectConfig
 // @Summary 设置es配置
 // @Tags es配置
 // @Accept json
 // @Produce json
-// @Param esConf body []models.EsConfig true "EsConfig"
-// @Success 200 {string} json {"code","msg","data"}
-// @Router /conf/set [post]
-func (con ConfController) SetConfig(c *gin.Context) {
-	// conf := commons.GetConfig("app.es.conf")
-	esConf := []models.EsConfig{}
-	if err := c.BindJSON(&esConf); err != nil {
-		log.Println(err)
-	}
-	log.Println(esConf)
-	commons.SetConfig("app.es.conf", esConf)
-	con.Ok(c, "设置配置成功", nil)
-}
-
-// UseConfig
-// @Summary 应用es配置
-// @Tags es配置
-// @Accept json
-// @Produce json
-// @Param esConf body models.EsConfig true "EsConfig"
-// @Success 200 {string} json {"code","msg","data"}
+// @Success 200 {string} json{"code","msg","data"}
 // @Router /conf/use [post]
-func (con ConfController) UseConfig(c *gin.Context) {
-	// conf := commons.GetConfig("app.es.conf")
-	esConf := models.EsConfig{}
-	if err := c.BindJSON(&esConf); err != nil {
-		log.Println(err)
+func (con ConfController) SelectConfig(c *gin.Context) {
+	var newConfig models.ESConfig
+	if err := c.ShouldBindJSON(&newConfig); err != nil {
+		con.Error(c, "启用配置失败")
+		return
 	}
-	log.Println(esConf)
-	commons.InitESClient(&esConf)
-	info := commons.CheckESClient()
-	con.Ok(c, "应用配置成功", info)
+
+	currentConfig := commons.SelectESConfig(newConfig)
+	con.Ok(c, "启用配置成功", currentConfig)
 }
