# docs/swagger.json
@@ -26,6 +26,50 @@
                 }
             }
         },
+        "/conf/add": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "es配置"
+                ],
+                "summary": "添加es配置",
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\",\"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/conf/del": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "es配置"
+                ],
+                "summary": "删除es配置",
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\",\"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/conf/get": {
             "get": {
                 "consumes": [
@@ -48,42 +92,6 @@
                 }
             }
         },
-        "/conf/set": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "es配置"
-                ],
-                "summary": "设置es配置",
-                "parameters": [
-                    {
-                        "description": "EsConfig",
-                        "name": "esConf",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.EsConfig"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "code\",\"msg\",\"data\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/conf/use": {
             "post": {
                 "consumes": [
@@ -95,18 +103,7 @@
                 "tags": [
                     "es配置"
                 ],
-                "summary": "应用es配置",
-                "parameters": [
-                    {
-                        "description": "EsConfig",
-                        "name": "esConf",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.EsConfig"
-                        }
-                    }
-                ],
+                "summary": "设置es配置",
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -128,7 +125,7 @@
                 "tags": [
                     "es查询"
                 ],
-                "summary": "获取索引",
+                "summary": "获取es索引",
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -139,8 +136,8 @@
                 }
             }
         },
-        "/es/getMapping": {
-            "post": {
+        "/es/getMappings": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -150,21 +147,7 @@
                 "tags": [
                     "es查询"
                 ],
-                "summary": "获取索引字段",
-                "parameters": [
-                    {
-                        "description": "indices",
-                        "name": "indices",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                ],
+                "summary": "获取es索引mappings",
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -172,28 +155,6 @@
                             "type": "string"
                         }
                     }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "models.EsConfig": {
-            "type": "object",
-            "properties": {
-                "addresses": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         }
