# router/router.go
@@ -22,21 +22,15 @@ func Router() *gin.Engine {
 	confRoute := r.Group("/conf")
 	{
 		confRoute.GET("/get", controller.ConfController{}.GetConfig)
-		confRoute.POST("/set", controller.ConfController{}.SetConfig)
-		confRoute.POST("/use", controller.ConfController{}.UseConfig)
+		confRoute.POST("/add", controller.ConfController{}.AddConfig)
+		confRoute.POST("/del", controller.ConfController{}.DeleteConfig)
+		confRoute.POST("/use", controller.ConfController{}.SelectConfig)
 	}
 	// 查询
 	esRoute := r.Group("/es")
 	{
 		esRoute.GET("/getIndices", controller.SearchController{}.GetIndices)
-		esRoute.POST("/getMapping", controller.SearchController{}.GetMapping)
+		esRoute.GET("/getMappings", controller.SearchController{}.GetMappings)
 	}
-	r.GET("/conf/get", service.GetConfig)
-	r.POST("/conf/add", service.AddConfig)
-	r.POST("/conf/del", service.DeleteConfig)
-	r.POST("/conf/set", service.SelectConfig)
-	// 查询
-	r.GET("/indices/get", service.GetIndices)
-	r.GET("/indices/mappings", service.GetMappings)
 	return r
 }
